tests/tools/checker/negative/void_field_type.nv
struct Bad {
    value: void;
}

fn main() : void {
    return;
}
